обновление всего проекта снова